# pb_1

./: README.md
bonus/: CMakeLists.txt  main.c
lab-1/: CMakeLists.txt  main.c
lab-2/: main.c
lab-3-1/: main.c
lab-3-2/: main.c
lab-3-3/: CMakeLists.txt  main.c
lab-4-1/: CMakeLists.txt  main.c
lab-4-2/: CMakeLists.txt  main.c
lab-5/: CMakeLists.txt  main.c
lab-6/: CMakeLists.txt  main.c
lab-7/: CMakeLists.txt  funcs.c  funcs.h  main.c
lab-8/: CMakeLists.txt  main.c
lab-9/: CMakeLists.txt  Makefile
lab-9/lib/: CMakeLists.txt  file.c  file.h  get.c  get.h  maths.h  str.c  str.h
lab-9/src/: CMakeLists.txt  anime-dbm-conf.c  anime-dbm-conf.h  anime-dbm-db.c  anime-dbm-db.h  anime-dbm-dialog.c  anime-dbm-dialog.h  anime-dbm-rec.c  anime-dbm-rec.h  anime-dbm-sort.c  anime-dbm-sort.h  anime-dbm.c
lib/: CMakeLists.txt
lib/char/: CMakeLists.txt  char.c  char.h
lib/clndr/: CMakeLists.txt  clndr.c  clndr.h
lib/clr_stdin/: CMakeLists.txt  clr_stdin.c  clr_stdin.h
lib/complex_ops/: CMakeLists.txt  complex_ops.c  complex_ops.h
lib/err/: CMakeLists.txt  err.c  err.h
lib/get/: CMakeLists.txt  get.c  get.h
lib/math_ops/: CMakeLists.txt  math_ops.c  math_ops.h
lib/rand/: CMakeLists.txt  rand.c  rand.h
lib/roman/: CMakeLists.txt  roman.c  roman.h
lib/sort/: CMakeLists.txt  sort.c  sort.h
lib/str/: CMakeLists.txt  str.c  str.h
lib/trig_ops/: CMakeLists.txt  trig_ops.c  trig_ops.h
lib/trngl_ops/: CMakeLists.txt  trngl_ops.c  trngl_ops.h
