add_subdirectory(char)

add_subdirectory(clndr)

add_subdirectory(clr_stdin)

add_subdirectory(complex_ops)

add_subdirectory(err)

add_subdirectory(get)

add_subdirectory(math_ops)

add_subdirectory(rand)

add_subdirectory(roman)

add_subdirectory(sort)

add_subdirectory(str)

add_subdirectory(trig_ops)

add_subdirectory(trngl_ops)